<!DOCTYPE resources [
    <!ENTITY appname "Call Assistant">
    ]>
<resources>
    <string name="app_name">&appname;</string>
    <string name="action_settings">Settings</string>
    <string name="title_contacts">Contacts</string>
    <string name="add_contacts">Add Contacts</string>
    <string name="request_call_screen_permission">Warning: If &appname; is not set as the default call screening application, &appname; will not function properly</string>
    <string name="device_not_support">Sorry, your device is currently not supported</string>
    <string name="add_from_phonebook">Add from phonebook</string>
    <string name="add_by_hand">Add manually </string>
    <string name="read_contacts">Read Contacts</string>
    <string name="pick_contact_from_phonebook">Pick a contact from phonebook</string>
    <string name="pick_contacts_failed">Failed to add contact. Please try again.</string>
    <string name="del_failed">Delete failed, please try again</string>
    <string name="del_succeed">Delete successful</string>
    <string name="request_contact_permission_content">Permission to read contacts needs to be granted to &appname; in order to add contacts from the phonebook.</string>
    <string name="cancel">Cancel</string>
    <string name="confirm">Confirm</string>
    <string name="del_contact">Do you want to delete %s? After deletion, you can still add %s.</string>
    <string name="name">Name</string>
    <string name="phone_number">Phone number</string>
    <string name="edit_contact">Modify contact information</string>
    <string name="fill_contact_name">Please fill in the contact\'s name.</string>
    <string name="fill_contact_phone">Please fill in the contact\'s phone number.</string>
    <string name="add_contact_succeed">Contact added successfully.</string>
    <string name="edit_contact_succeed">Modified contact information successfully</string>
    <string name="take_photo">Take photo</string>
    <string name="pick_from_gallery">Choose from Gallery</string>
    <string name="camera">Camera</string>
    <string name="err_retry">An error occurred, please try again(%d)</string>
    <string name="no_contacts">No contacts.When the contact you added  calls you, your ringtone volume will be adjusted to maximum. Click the button below to add a contact</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="privacy_policy_content">By proceeding,you confirm that you accept the privacy policy</string>
    <string name="refuse">DECLINE</string>
    <string name="accept">ACCEPT</string>
    <string name="install_browser_first">Please install a browser to view</string>
    <string name="please_select">Please select</string>
    <string name="submit">Submit</string>
    <string name="contact_info">How do we contact you</string>
    <string name="feedback">Feedback</string>
    <string name="feedback_type">Feedback type</string>
    <string name="feedback_content">Feedback content</string>
    <string name="input_feedback_content">Please enter feedback content.</string>
    <string name="input_feedback_content_max">You can enter up to 500 characters.</string>
    <string name="think_feedback">Thank you for your feedback! Your input is important to us and helps improve our service. We appreciate your support!</string>
    <string name="loading_failed_retry">Loading failed. Please check your network and try again</string>
    <string name="submitting">Submitting</string>
    <string name="submit_success">Submit Success</string>
    <string name="submit_fail">Submit Failed,please try again</string>
    <string name="select_feedback_type">Please select feedback type</string>
    <string name="new_version_can_installed">Click to install the new version</string>
    <string name="new_version_downloading">The new version is downloading</string>
    <string name="download_fail_click_retry">Download failed, please click to retry</string>
    <string name="retry">Retry</string>
    <string name="install">Install</string>
    <string name="app_update_notification">Update notifications</string>
    <string name="tips">Tips</string>
    <string name="open_notification_permission_content">Please enable the notification of &appname; to avoid missing important notifications</string>
    <string name="default_caller_id">Default caller ID</string>
    <string name="default_caller_id_subtitle">Adjust the volume of the ringtone for you when calling</string>
    <string name="notification_permission">Notification</string>
    <string name="install_new_ver">The new version has been downloaded and completed. Would you like to install it now</string>
    <string name="enable">Enable</string>
    <string name="enable_immediately">Enable immediately</string>
    <string name="enabled">Enabled</string>
    <string name="disable">Disable</string>
    <string name="disabled">Disabled</string>
    <string name="contact_us">Contact Us</string>
    <string name="about_us">About Us</string>
    <string name="close">Close</string>
    <string name="feature_disabled">Call reminder function disabled yet</string>
    <string name="important">Important</string>
    <string name="no_recover_volume_permission">No permission to restore ringtone volume for you, click to authorize</string>
    <string name="permission_notification">Permission notification</string>
    <string name="read_phone_state">Read phone state</string>
    <string name="read_phone_state_subtitle">Restore the volume of the ringtone when the ringing state is pushed out</string>
    <string name="no_read_phone_state_permission">&appname; no permission to read phone state. When exiting the ringing state, the volume cannot be restored for you</string>
    <string name="i_see">I see</string>
    <string name="contact_us_dialog_content">You can contact us via email: %s</string>
    <string name="suggestion">Improvement Suggestions</string>
    <string name="issue">Issues</string>
    <string name="email_input">Please enter your email address</string>
    <string name="email_incorrect">The entered email address format is incorrect</string>
    <string name="get_contact_phone_number_failed">Failed to obtain phone number, please report this issue in Settings-Feedback</string>
    <string name="contact_phone_exist_yet">The phone number already exists</string>
    <string name="new_version_available">The new version is now available.Click to download and install!</string>
    <string name="notify_channel_new_version">Version update notification</string>
    <string name="close_temp">Temporarily disabled for %s</string>
    <string name="other">Other</string>
    <string name="auto_enable_after">Automatically enabled after %s</string>
    <string name="select">Select</string>
    <string name="go_setting">Set</string>
    <string name="open_phone_book_failed">Failed to open the phonebook, please check if there is a phonebook app on your device</string>
    <string name="crop_avatar_failed">Failed to select avatar, please report this issue to us in  Settings-Feedback section</string>
    <string name="selected_time_less_then_current">Selected time less than the current time and we has automatically enabled for you</string>
    <string name="disable_permanent">Disabled permanently</string>
    <string name="contacts_permission">Contacts Permission</string>
    <string name="to_receive_incoming_call">To obtain incoming call information</string>
    <string name="above_11_need_contacts_permission">Due to the limitations of Android 11 and above.When the contact you added is in your phone book, &appname; can not obtain the incoming call information without the contacts permission.</string>
</resources>