<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/feedback_title"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/main_color"
        android:elevation="5dp"
        app:navigationIcon="@drawable/ic_back"
        app:title="@string/feedback"
        app:titleCentered="true"
        app:titleTextColor="@color/white" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="15dp"
                android:layout_marginTop="15dp"
                android:background="@drawable/bg_dash_gray_radius10"
                android:gravity="center"
                android:padding="10dp"
                android:text="@string/think_feedback"
                android:textColor="@color/gray_666"
                android:textSize="12sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="15dp"
                android:layout_marginTop="30dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/feedback_type"
                    android:textColor="@color/black" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:text="*"
                    android:textColor="@color/red"
                    tools:ignore="HardcodedText" />
            </LinearLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/feedback_type"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="15dp"
                app:counterEnabled="false"
                app:errorEnabled="true"
                app:hintEnabled="false">

                <TextView
                    android:id="@+id/feedback_type_content"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/bg_edit_text_gray"
                    android:hint="@string/please_select"
                    android:maxLines="1"
                    android:paddingHorizontal="15dp"
                    android:paddingVertical="10dp"
                    android:textColor="@color/black" />
            </com.google.android.material.textfield.TextInputLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="15dp"
                android:layout_marginTop="30dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/feedback_content"
                    android:textColor="@color/black" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:text="*"
                    android:textColor="@color/red"
                    tools:ignore="HardcodedText" />
            </LinearLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/feedback_content_ly"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="15dp"
                android:layout_marginTop="7dp"
                app:counterEnabled="true"
                app:counterMaxLength="500"
                app:errorEnabled="true"
                app:hintEnabled="false">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/feedback_content"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/bg_edit_text_gray"
                    android:gravity="top"
                    android:inputType="textMultiLine"
                    android:lines="5"
                    android:paddingHorizontal="15dp"
                    android:paddingVertical="10dp" />
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="15dp"
                android:layout_marginTop="20dp"
                android:text="@string/contact_info"
                android:textColor="@color/black" />

            <EditText
                android:id="@+id/feedback_contact_info"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="15dp"
                android:layout_marginTop="7dp"
                android:background="@drawable/bg_edit_text_gray"
                android:importantForAutofill="no"
                android:inputType="text"
                android:paddingHorizontal="15dp"
                android:paddingVertical="10dp" />
        </LinearLayout>
    </ScrollView>

    <Button
        android:id="@+id/feedback_submit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="15dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="50dp"
        android:background="@drawable/bg_main_color_radius25"
        android:text="@string/submit"
        android:textColor="@color/white" />
</LinearLayout>